readiness-app/force-app/main/default/objects/InContact_Reports__mdt/InContact_Reports__mdt.object-meta.xml
<CustomObject>
    <description>This is list of various reports that are used for Einstein App.</description>
    <label>InContact Report</label>
    <pluralLabel>InContact Reports</pluralLabel>
</CustomObject>