readiness-app/force-app/main/default/objects/InContact_Reports__mdt/fields/Dataset_Name__c.field-meta.xml
<CustomField>
    <fullName>Dataset_Name__c</fullName>
    <description>Dataset Name</description>
    <inlineHelpText>Dataset Name</inlineHelpText>
    <label>Dataset Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>