readiness-app/force-app/main/default/objects/InContact_Reports__mdt/fields/endDate__c.field-meta.xml
<CustomField>
    <fullName>endDate__c</fullName>
    <label>endDate</label>
    <length>50</length>
    <type>Text</type>
</CustomField>