readiness-app/force-app/main/default/objects/InContact_Reports__mdt/fields/fields__c.field-meta.xml
<CustomField>
    <fullName>fields__c</fullName>
    <label>fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>