readiness-app/force-app/main/default/objects/InContact_Reports__mdt/fields/MetaData_Json__c.field-meta.xml
<CustomField>
    <fullName>MetaData_Json__c</fullName>
    <label>MetaData Json</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>