readiness-app/force-app/main/default/objects/InContact_Reports__mdt/fields/Report_URL__c.field-meta.xml
<CustomField>
    <fullName>Report_URL__c</fullName>
    <description>Report URL</description>
    <inlineHelpText>Report URL</inlineHelpText>
    <label>Report URL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>