readiness-app/force-app/main/default/objects/InContact_Reports__mdt/fields/ReportId__c.field-meta.xml
<CustomField>
    <fullName>ReportId__c</fullName>
    <description>ReportId</description>
    <inlineHelpText>ReportId</inlineHelpText>
    <label>ReportId</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>