readiness-app/force-app/main/default/objects/InContact_Reports__mdt/fields/startDate__c.field-meta.xml
<CustomField>
    <fullName>startDate__c</fullName>
    <label>startDate</label>
    <length>50</length>
    <type>Text</type>
</CustomField>